# AAA

./: .env.example  .gitignore  README.md  config.example.yaml
live_deploy/: .env.example  DEPLOY.md  README.md  pyproject.toml
live_deploy/data/backtests/: champions.json  profiles.json  results.parquet
live_deploy/data/parquet/bars/: CJ_1d.parquet  CJ_30m.parquet  CS_1d.parquet  C_15m.parquet  C_30m.parquet  FG_1d.parquet  FG_60m.parquet  RB_60m.parquet  RM_1d.parquet  RM_30m.parquet  RM_60m.parquet  SA_15m.parquet  SA_30m.parquet  SP_15m.parquet  SP_60m.parquet  SR_15m.parquet  SR_1d.parquet  UR_1d.parquet  UR_30m.parquet
live_deploy/data/parquet/signals/: signals.parquet
live_deploy/data/parquet/term_structure/: C.parquet  HC.parquet  SA.parquet
live_deploy/qihuo_signal/: alerts.py  analysis.py  backtest.py  cli.py  dashboard.py  data_sources.py  models.py  polling.py  refine.py  storage.py  strategy.py  term_structure.py  walkforward.py
live_deploy/reports/: backtest_report.md  champions.json  fixed_strategy_validation.csv  fixed_strategy_validation_windows.csv  profiles_summary.csv  refined_candidates.csv  research_driven_strategy_plan.md  research_strategy_summary.md  strategy_profiles.json  top_return.csv  top_winrate.csv  walk_forward_report.md  walk_forward_summary.csv  walk_forward_windows.csv
live_deploy/scripts/: install.ps1  install.sh  run_dashboard.sh  run_live_loop.ps1  run_live_loop.sh  run_news_once.ps1  run_news_once.sh  run_once.ps1  run_once.sh
qihuo_signal/: __init__.py  alerts.py  backtest.py  cli.py  config.py  events.py  models.py  (+5 more)
(+68 files in other folders)
