[project]
name = "qihuo-signal"
version = "0.1.0"
description = "Local futures strategy lab and intraday signal notifier for Chinese commodity futures."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=1.0",
    "pydantic>=2",
    "PyYAML>=6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
data = ["akshare>=1.14"]
test = ["pytest>=8"]

[project.scripts]
qihuo = "qihuo_signal.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qihuo_signal*"]
